# postdoc-tracker

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  server.py  sources.py  start.sh
electron/: main.js  package.json
postdoc_tracker/: __init__.py  __main__.py  config_default.yaml  server.py
postdoc_tracker/public/: app.js  index.html  style.css
