[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postdoc-tracker"
version = "0.1.0"
description = "Local web app to track postdoc and PhD job offers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.1",
    "requests>=2.32",
    "beautifulsoup4>=4.13",
    "pyyaml>=6.0",
]

[project.scripts]
postdoc-tracker = "postdoc_tracker.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
postdoc_tracker = ["public/**/*", "config_default.yaml"]
